[gd_scene load_steps=73 format=2]

[ext_resource path="res://img/mini-shield-bar-export.png" type="Texture" id=1]
[ext_resource path="res://FinishedNotes/Key.tscn" type="PackedScene" id=2]
[ext_resource path="res://img/minibar.png" type="Texture" id=3]
[ext_resource path="res://classes/Enemys/Skeleton-Mage-Boss.gd" type="Script" id=4]
[ext_resource path="res://classes/spells/SpellFireball.tscn" type="PackedScene" id=5]
[ext_resource path="res://img/fantasy-skeleton-enemies/Fantasy Skeleton Enemies/Skeleton Mage-Boss-sheet.png" type="Texture" id=6]

[sub_resource type="AtlasTexture" id=67]
atlas = ExtResource( 6 )
region = Rect2( 0, 96, 48, 48 )

[sub_resource type="AtlasTexture" id=68]
atlas = ExtResource( 6 )
region = Rect2( 48, 96, 48, 48 )

[sub_resource type="AtlasTexture" id=69]
atlas = ExtResource( 6 )
region = Rect2( 96, 96, 48, 48 )

[sub_resource type="AtlasTexture" id=70]
atlas = ExtResource( 6 )
region = Rect2( 144, 96, 48, 48 )

[sub_resource type="AtlasTexture" id=71]
atlas = ExtResource( 6 )
region = Rect2( 192, 96, 48, 48 )

[sub_resource type="AtlasTexture" id=72]
atlas = ExtResource( 6 )
region = Rect2( 240, 96, 48, 48 )

[sub_resource type="AtlasTexture" id=73]
atlas = ExtResource( 6 )
region = Rect2( 0, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=74]
atlas = ExtResource( 6 )
region = Rect2( 48, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=75]
atlas = ExtResource( 6 )
region = Rect2( 96, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=76]
atlas = ExtResource( 6 )
region = Rect2( 144, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=77]
atlas = ExtResource( 6 )
region = Rect2( 192, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=78]
atlas = ExtResource( 6 )
region = Rect2( 240, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=79]
atlas = ExtResource( 6 )
region = Rect2( 288, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=80]
atlas = ExtResource( 6 )
region = Rect2( 336, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=81]
atlas = ExtResource( 6 )
region = Rect2( 0, 144, 48, 48 )

[sub_resource type="AtlasTexture" id=82]
atlas = ExtResource( 6 )
region = Rect2( 48, 144, 48, 48 )

[sub_resource type="AtlasTexture" id=83]
atlas = ExtResource( 6 )
region = Rect2( 96, 144, 48, 48 )

[sub_resource type="AtlasTexture" id=84]
atlas = ExtResource( 6 )
region = Rect2( 144, 144, 48, 48 )

[sub_resource type="AtlasTexture" id=85]
atlas = ExtResource( 6 )
region = Rect2( 192, 144, 48, 48 )

[sub_resource type="AtlasTexture" id=86]
atlas = ExtResource( 6 )
region = Rect2( 0, 48, 48, 48 )

[sub_resource type="AtlasTexture" id=87]
atlas = ExtResource( 6 )
region = Rect2( 48, 48, 48, 48 )

[sub_resource type="AtlasTexture" id=88]
atlas = ExtResource( 6 )
region = Rect2( 96, 48, 48, 48 )

[sub_resource type="AtlasTexture" id=89]
atlas = ExtResource( 6 )
region = Rect2( 144, 48, 48, 48 )

[sub_resource type="AtlasTexture" id=90]
atlas = ExtResource( 6 )
region = Rect2( 192, 48, 48, 48 )

[sub_resource type="AtlasTexture" id=91]
atlas = ExtResource( 6 )
region = Rect2( 240, 48, 48, 48 )

[sub_resource type="AtlasTexture" id=92]
atlas = ExtResource( 6 )
region = Rect2( 288, 48, 48, 48 )

[sub_resource type="AtlasTexture" id=93]
atlas = ExtResource( 6 )
region = Rect2( 336, 48, 48, 48 )

[sub_resource type="AtlasTexture" id=94]
atlas = ExtResource( 6 )
region = Rect2( 384, 48, 48, 48 )

[sub_resource type="AtlasTexture" id=95]
atlas = ExtResource( 6 )
region = Rect2( 432, 48, 48, 48 )

[sub_resource type="AtlasTexture" id=96]
atlas = ExtResource( 6 )
region = Rect2( 480, 48, 48, 48 )

[sub_resource type="AtlasTexture" id=97]
atlas = ExtResource( 6 )
region = Rect2( 528, 48, 48, 48 )

[sub_resource type="AtlasTexture" id=98]
atlas = ExtResource( 6 )
region = Rect2( 576, 48, 48, 48 )

[sub_resource type="AtlasTexture" id=99]
atlas = ExtResource( 6 )
region = Rect2( 624, 48, 48, 48 )

[sub_resource type="AtlasTexture" id=100]
atlas = ExtResource( 6 )
region = Rect2( 672, 48, 48, 48 )

[sub_resource type="AtlasTexture" id=101]
atlas = ExtResource( 6 )
region = Rect2( 720, 48, 48, 48 )

[sub_resource type="AtlasTexture" id=102]
atlas = ExtResource( 6 )
region = Rect2( 768, 48, 48, 48 )

[sub_resource type="AtlasTexture" id=103]
atlas = ExtResource( 6 )
region = Rect2( 816, 48, 48, 48 )

[sub_resource type="AtlasTexture" id=104]
atlas = ExtResource( 6 )
region = Rect2( 864, 48, 48, 48 )

[sub_resource type="AtlasTexture" id=105]
atlas = ExtResource( 6 )
region = Rect2( 912, 48, 48, 48 )

[sub_resource type="AtlasTexture" id=106]
atlas = ExtResource( 6 )
region = Rect2( 960, 48, 48, 48 )

[sub_resource type="AtlasTexture" id=107]
atlas = ExtResource( 6 )
region = Rect2( 0, 192, 48, 48 )

[sub_resource type="AtlasTexture" id=108]
atlas = ExtResource( 6 )
region = Rect2( 48, 192, 48, 48 )

[sub_resource type="AtlasTexture" id=109]
atlas = ExtResource( 6 )
region = Rect2( 96, 192, 48, 48 )

[sub_resource type="AtlasTexture" id=110]
atlas = ExtResource( 6 )
region = Rect2( 144, 192, 48, 48 )

[sub_resource type="AtlasTexture" id=111]
atlas = ExtResource( 6 )
region = Rect2( 192, 192, 48, 48 )

[sub_resource type="AtlasTexture" id=112]
atlas = ExtResource( 6 )
region = Rect2( 240, 192, 48, 48 )

[sub_resource type="AtlasTexture" id=113]
atlas = ExtResource( 6 )
region = Rect2( 288, 192, 48, 48 )

[sub_resource type="AtlasTexture" id=114]
atlas = ExtResource( 6 )
region = Rect2( 336, 192, 48, 48 )

[sub_resource type="AtlasTexture" id=115]
atlas = ExtResource( 6 )
region = Rect2( 384, 192, 48, 48 )

[sub_resource type="AtlasTexture" id=116]
atlas = ExtResource( 6 )
region = Rect2( 432, 192, 48, 48 )

[sub_resource type="AtlasTexture" id=117]
atlas = ExtResource( 6 )
region = Rect2( 480, 192, 48, 48 )

[sub_resource type="AtlasTexture" id=118]
atlas = ExtResource( 6 )
region = Rect2( 528, 192, 48, 48 )

[sub_resource type="AtlasTexture" id=119]
atlas = ExtResource( 6 )
region = Rect2( 576, 192, 48, 48 )

[sub_resource type="AtlasTexture" id=120]
atlas = ExtResource( 6 )
region = Rect2( 624, 192, 48, 48 )

[sub_resource type="AtlasTexture" id=121]
atlas = ExtResource( 6 )
region = Rect2( 672, 192, 48, 48 )

[sub_resource type="AtlasTexture" id=122]
atlas = ExtResource( 6 )
region = Rect2( 720, 192, 48, 48 )

[sub_resource type="AtlasTexture" id=123]
atlas = ExtResource( 6 )
region = Rect2( 768, 192, 48, 48 )

[sub_resource type="AtlasTexture" id=124]
atlas = ExtResource( 6 )
region = Rect2( 816, 192, 48, 48 )

[sub_resource type="SpriteFrames" id=59]
animations = [ {
"frames": [ SubResource( 67 ), SubResource( 68 ), SubResource( 69 ), SubResource( 70 ), SubResource( 71 ), SubResource( 72 ) ],
"loop": true,
"name": "Move",
"speed": 10.0
}, {
"frames": [ SubResource( 73 ), SubResource( 74 ), SubResource( 75 ), SubResource( 76 ), SubResource( 77 ), SubResource( 78 ), SubResource( 79 ), SubResource( 80 ) ],
"loop": true,
"name": "Idle",
"speed": 14.0
}, {
"frames": [ SubResource( 81 ), SubResource( 82 ), SubResource( 83 ), SubResource( 84 ), SubResource( 85 ) ],
"loop": false,
"name": "Hurt",
"speed": 10.0
}, {
"frames": [ SubResource( 86 ), SubResource( 87 ), SubResource( 88 ), SubResource( 89 ), SubResource( 90 ), SubResource( 91 ), SubResource( 92 ), SubResource( 93 ), SubResource( 94 ), SubResource( 95 ), SubResource( 96 ), SubResource( 97 ), SubResource( 98 ), SubResource( 99 ), SubResource( 100 ), SubResource( 101 ), SubResource( 102 ), SubResource( 103 ), SubResource( 104 ), SubResource( 105 ), SubResource( 106 ) ],
"loop": false,
"name": "Attack",
"speed": 20.0
}, {
"frames": [ SubResource( 107 ), SubResource( 108 ), SubResource( 109 ), SubResource( 110 ), SubResource( 111 ), SubResource( 112 ), SubResource( 113 ), SubResource( 114 ), SubResource( 115 ), SubResource( 116 ), SubResource( 117 ), SubResource( 118 ), SubResource( 119 ), SubResource( 120 ), SubResource( 121 ), SubResource( 122 ), SubResource( 123 ), SubResource( 124 ) ],
"loop": false,
"name": "Die",
"speed": 10.0
} ]

[sub_resource type="RectangleShape2D" id=60]
extents = Vector2( 8.375, 15.875 )

[sub_resource type="CapsuleShape2D" id=66]
radius = 6.0
height = 38.0

[sub_resource type="CapsuleShape2D" id=65]
radius = 21.0

[sub_resource type="RectangleShape2D" id=62]
extents = Vector2( 307, 35 )

[sub_resource type="GDScript" id=63]
script/source = "extends \"res://classes/EnemyStats.gd\"


# Declare member variables here. Examples:
# var a = 2
# var b = \"text\"


# Called when the node enters the scene tree for the first time.
func _ready():
	pass # Replace with function body.


# Called every frame. 'delta' is the elapsed time since the previous frame.
#func _process(delta):
#	pass
"

[sub_resource type="StreamTexture" id=125]
load_path = "res://.import/minibar.png-926486d2ce11cb1078e1f9e594198d0d.stex"

[sub_resource type="StreamTexture" id=126]
load_path = "res://.import/mini-health-bar.png-e286443f55963f86dc90e59d56ad8fe7.stex"

[node name="Skeleton-Mage-Boss" type="KinematicBody2D"]
script = ExtResource( 4 )
spell_scene = ExtResource( 5 )
loot_scene = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, 1 )
scale = Vector2( 1.75, 1.75 )
frames = SubResource( 59 )
animation = "Hurt"
frame = 4
playing = true
offset = Vector2( 4, -19.5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -17 )
shape = SubResource( 60 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="."]
position = Vector2( 0, -29 )
shape = SubResource( 66 )

[node name="HitBox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
position = Vector2( 0, -27 )
shape = SubResource( 65 )

[node name="PlayerDetect" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetect"]
position = Vector2( -2, -35 )
shape = SubResource( 62 )

[node name="EnemyStats" type="Node" parent="."]
script = SubResource( 63 )

[node name="Weapon" type="Node2D" parent="."]
position = Vector2( 0, -16 )

[node name="NormalSpawn" type="Position2D" parent="Weapon"]
position = Vector2( 30, -15 )

[node name="Spawns" type="Node2D" parent="Weapon"]

[node name="Position2D2" type="Position2D" parent="Weapon/Spawns"]
position = Vector2( 30, -29 )

[node name="Position2D3" type="Position2D" parent="Weapon/Spawns"]
position = Vector2( 30, -1 )

[node name="Timer" type="Timer" parent="Weapon"]
wait_time = 2.0
one_shot = true

[node name="Plate" type="VBoxContainer" parent="."]
margin_left = -13.0
margin_top = -87.0
margin_right = 13.0
margin_bottom = -77.0
custom_constants/separation = 0
alignment = 1
__meta__ = {
"_edit_group_": true
}

[node name="EngeriePlate" type="TextureRect" parent="Plate"]
margin_right = 26.0
margin_bottom = 5.0
texture = ExtResource( 3 )
stretch_mode = 1
__meta__ = {
"_edit_group_": true
}

[node name="EnergieBar" type="TextureRect" parent="Plate/EngeriePlate"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 1 )
expand = true

[node name="HealthPlate" type="TextureRect" parent="Plate"]
margin_top = 5.0
margin_right = 26.0
margin_bottom = 10.0
texture = SubResource( 125 )
stretch_mode = 1
__meta__ = {
"_edit_group_": true
}

[node name="HealthBar" type="TextureRect" parent="Plate/HealthPlate"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = SubResource( 126 )
expand = true

[node name="EnergieTimer" type="Timer" parent="."]
wait_time = 2.5
autostart = true

[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="frame_changed" from="AnimatedSprite" to="." method="_on_AnimatedSprite_frame_changed"]
[connection signal="area_entered" from="HitBox" to="." method="_on_HitBox_area_entered"]
[connection signal="body_entered" from="PlayerDetect" to="." method="_on_PlayerDetect_body_entered"]
[connection signal="body_exited" from="PlayerDetect" to="." method="_on_PlayerDetect_body_exited"]
[connection signal="timeout" from="Weapon/Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="EnergieTimer" to="." method="_on_EnergieTimer_timeout"]
